--- a/Oasis/index.html
+++ b/Oasis/index.html
@@ -66,7 +66,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Home Exchange Made Easy</h4>
-                        <p class="text-muted">Simply Sign Up and create a profile to begin your Oasis experience.</p>
+                        <p class="text-muted">Simply <a href="#">Sign Up</a> and create a profile to begin your Oasis experience.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
