--- a/Oasis/index.html
+++ b/Oasis/index.html
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Discover</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Reviews</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#discover">Discover</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#reviews">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,11 +41,11 @@
             <div class="container">
                 <div class="masthead-subheading">OASIS</div>
                 <div class="masthead-heading text-uppercase">Your Home Away From Home</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Discover</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#discover">Discover</a>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About Us</h2>
@@ -66,7 +66,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Home Exchange Made Easy</h4>
-                        <p class="text-muted">Simply <a href="#">Sign Up</a> and create a profile to begin your Oasis experience.</p>
+                        <p class="text-muted">Simply <a href="#signup">Sign Up</a> and create a profile to begin your Oasis experience.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -80,7 +80,7 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="discover">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Popular Destinations</h2>
@@ -178,10 +178,11 @@
                         </div>
                     </div>
                 </div>
+                <a id="discoverbtn" href="#" target="blank">View All Properties</a>
             </div>
         </section>
         <!-- About-->
-        <section class="page-section" id="about">
+        <section class="page-section" id="reviews">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Reviews</h2>
@@ -255,8 +256,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Shruti Singh</h4>
                             <p class="text-muted">Coder, Party Girl</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-github"></i></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
@@ -265,9 +265,8 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Titilola Olurin</h4>
                             <p class="text-muted">Designer, Avid Netflix Watcher</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/TTOlurin" target="blank"><i class="fab fa-github"></i></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/titilola-olurin-830288207/" target="blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -284,7 +283,7 @@
             </div>
         </div>
         <!-- Contact-->
-        <section class="page-section" id="contact">
+        <section class="page-section" id="signup">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
