--- a/Oasis/index.html
+++ b/Oasis/index.html
@@ -43,7 +43,7 @@
                 <div class="masthead-heading text-uppercase">Your Home Away From Home</div>
                 <div class="search-wrap"> 
                     <div class="searchbar">
-                        <input type="text" class="input">
+                        <input type="text" class="input" placeholder="Search for cities">
                         <div class="search-button">
                             <i class="fas fa-search"></i>
                         </div>
@@ -295,7 +295,7 @@
         <section class="page-section" id="signup">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
+                    <h2 class="section-heading text-uppercase">Sign Up</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
@@ -305,7 +305,7 @@
                 <!-- To make this form functional, sign up at-->
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <form id="contactForm" action="/add" method="POST"> <!--data-sb-form-api-token="API_TOKEN"-->
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -325,10 +325,77 @@
                                 <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
                             </div>
                         </div>
+                        <h2 class="section-heading text-uppercase">Create your Profile</h2>
                         <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <!-- Message input-->
-                                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
+                            <div class="form-group">
+                                <!-- Country input-->
+                                <input class="form-control" id="country" placeholder="Your Country *" data-sb-validations="required"></textarea>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- City input-->
+                                <input class="form-control" id="city" placeholder="Your City *" data-sb-validations="required"></textarea>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- Address input-->
+                                <input class="form-control" id="homeaddress" placeholder="Your Address *" data-sb-validations="required"></textarea>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- home type input-->
+                                <label for="housetype">House Type:</label>
+                                <select class="form-control" id="housetype" data-sb-validations="required">
+                                    <option value="" disabled selected>Select an option</option>
+                                    <option value="apartment">Apartment</option>
+                                    <option value="house">House</option>
+                                </select>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- Room Number Input-->
+                                <label for="rooms">Number of Bedrooms:</label>
+                                <select class="form-control" id="rooms" data-sb-validations="required">
+                                    <option value="" disabled selected>Select an option</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- Bathroom Number Input -->
+                                <label for="bathrooms">Number of Bathrooms:</label>
+                                <select class="form-control" id="bathrooms" data-sb-validations="required">
+                                    <option value="" disabled selected>Select an option</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- Wifi Input-->
+                                <p>Is there wifi available?</p>
+                                <input type="radio" id="yes" data-sb-validations="required"></textarea>
+                                <label for="yes">Yes</label>
+                                <input type="radio" id="no" data-sb-validations="required"></textarea>
+                                <label for="no">No</label>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            </div>
+                            <div class="form-group">
+                                <!-- Pets Input-->
+                                <p>Is it pet-friendly?</p>
+                                <input type="radio" id="yes" data-sb-validations="required"></textarea>
+                                <label for="yes">Yes</label>
+                                <input type="radio" id="no" data-sb-validations="required"></textarea>
+                                <label for="no">No</label>
                                 <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
                             </div>
                         </div>
